--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,13 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300);
 
 @import url(https://fonts.googleapis.com/css?family=Oswald:300);
-footer{
+ div .container{
+    background:gray;
 }
 nav {
     height: 200px;
-    margin-bottom: 500px;
+    margin-bottom: 2px;
     text-align: center;
-    background: #333;
+    background: url(../images/backgroundNew.png);
+    background-size: 100%;
     border-bottom: #E05151 5px solid;
     position: absolute;
     top:0;
@@ -15,32 +17,42 @@ nav {
     width:100%;
     z-index: -1;
     overflow: hidden;
+
 }
 nav a{
+    z-inder: -50px;
     float:left;
+}
+nav a img{
+    position: absolute;
+    top: -25px;
 }
 nav ul {
     list-style: none;
-    margin-right: 17em;
     padding:0;
-    position: relative;
     float: none;
 }
 nav ul li {
     display: inline-block;
     margin: 7px;
-    font-size:30px;
+    font-size:35px;
     font-family: 'Oswald', sans-serif;
     margin-top: 125px;
-    background: #333;
     brder: 13px solid #333;
-    position:relative;
+    text-shadow:
+            -2px -2px 0 #fff,
+            2px -2px 0 #fff,
+            -2px 2px 0 #fff,
+            2px 2px 0 #fff;
+
 }
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
     transition: all .5s;
 }
+
+
 nav ul li a:hover {
     color: #E05151;
     transition: all .5s;
@@ -99,9 +111,15 @@ h1 {
     z-index: 200;
     text-align: center;
     font-family: 'Raleway', sans-serif;
-    color: #E05151;
+    color: black;
+    font-weight: bold;
     font-size: 50px;
     margin-top: 44px;
+    text-shadow:
+            -2px -2px 0 #fff,
+            2px -2px 0 #fff,
+            -2px 2px 0 #fff,
+            2px 2px 0 #fff;
 }
 *{
     font-weight:700
@@ -149,3 +167,7 @@ div .margin{
 .alignLeftContent{
     text-align: left;
 }
+
+/**{*/
+    /*border: 2px solid black;*/
+/*}*/
