--- a/css/styles.css
+++ b/css/styles.css
@@ -279,3 +279,30 @@ input #avatar{
 .fron_beer {
     margin: 10px;
 }
+
+/*Table css for fixing start here*/
+
+
+.table-fixed {
+    height: 400px;
+    overflow-y: auto;
+    width: 100%;
+}
+
+/*Table css for fixing end here*/
+
+
+/*Shadows in prfile.php strokes start here */
+
+.shadow_strokes{
+    box-shadow:
+            0px 2px 2px rgba(255, 173, 51,0.28);
+}
+
+.shadow_animation_stroke{
+    background-color: #ffffff;
+    animation: mymove 5s infinite;
+}
+@keyframes mymove {
+    50% {box-shadow: 6px 6px 6px rgba(255, 173, 51,0.28);}
+}
