--- a/css/styles.css
+++ b/css/styles.css
@@ -296,13 +296,19 @@ input #avatar{
 
 .shadow_strokes{
     box-shadow:
-            0px 2px 2px rgba(255, 173, 51,0.28);
+            0 2px 2px rgba(255, 173, 51,0.28);
 }
 
-.shadow_animation_stroke{
-    background-color: #ffffff;
-    animation: mymove 5s infinite;
+.shadow_strokes_big{
+    box-shadow:
+            6px 6px 6px rgba(255, 173, 51,0.39);
 }
-@keyframes mymove {
-    50% {box-shadow: 6px 6px 6px rgba(255, 173, 51,0.28);}
-}
+/*.shadow_animation_stroke{*/
+    /*background-color: #ffffff;*/
+    /*animation: mymove 5s infinite;*/
+/*}*/
+/*@keyframes mymove {*/
+    /*50% {box-shadow: 6px 6px 6px rgba(255, 173, 51,0.28);}*/
+/*}*/
+
+/*Shadows in prfile.php strokes end here */
