--- a/css/catalog.css
+++ b/css/catalog.css
@@ -10,6 +10,7 @@
   padding-top: 100px;
   text-align: center;
 }
+
 .container .product {
   position: relative;
   overflow: hidden;
@@ -109,7 +110,7 @@
 
 .quickviewContainer {
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: 400px;
   background: rgba(0, 0, 0, 0.9);
   top: 70px;
