--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ footer{
 }
 footer div{
     color: #a56000;
-    font-size: 50px;
+    /*font-size: 50px;*/
     text-align: center;
     width: 100%;
     background-size: 100%;
