--- a/css/styles.css
+++ b/css/styles.css
@@ -62,10 +62,7 @@ nav ul li a:hover {
     transition: all .5s;
     /*border-bottom: 2px solid #E05151;*/
 }
-nav ul li a:active {
-    /*color: ;*/
-    border-bottom: 8px solid #E05151;
-}
+
 nav ul a{
     float:left;
 }
@@ -143,14 +140,14 @@ h1 {
 }
 .button2 {
     width: 120px;
-    border: 2px solid #E05151;
+    /*border: 2px solid #E05151;*/
     border-radius: 5px;
     color: #E05151;
 }
 .button2:hover {
     background: #E05151;
     color: #333;
-    border: 2px solid #E05151;
+    /*border: 2px solid #E05151;*/
     border-radius: 5px;
     transition: .5s;
 }
@@ -258,7 +255,7 @@ div div .margin{
 .text_shadow{
     color: #E05151;
     transition: all .5s;
-    border-bottom: 2px solid #E05151;
+    /*border-bottom: 2px solid #E05151;*/
 
 }
 
