--- a/css/catalog.css
+++ b/css/catalog.css
@@ -105,14 +105,15 @@
   height: 100%;
   width: 400px;
   background: #343434;
-  top: 70px;
+  top: 75px;
   right: -100%;
   transition: all .3s ease;
   padding: 30px;
   color: #fff;
   box-shadow:
           -5px 0 15px #EEA500;
-
+  z-index: 9999;
+  overflow: auto;
 }
 .quickviewContainer .close {
   height: 20px;
@@ -142,7 +143,7 @@
   margin-bottom: 20px;
   text-align: justify !important;
   /*text-align: justify;*/
-  padding-bottom: 10px;
+  padding-bottom: 10px;  
 }
 .quickviewContainer img {
   display: inline-block;
