--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,8 @@ footer h4{
     font-size: 10px;
     text-align: center;
     margin-top: -10px;
+    margin-left: 50px;
+    margin-right: 50px;
     background-color: #eee;
 }
 
