--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,10 @@ footer h4{
     font-size: 10px;
     text-align: center;
     margin-top: -10px;
+    margin-left: 25px;
+    margin-right: 25px;
     background-color: #eee;
+
 }
 
 .best_beers div {
